--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -449,5 +449,11 @@ However, if authors of study offer a convincing argument for their deviation, th
 In fact, using the here presented framework, we can distinguish reasonable from unreasonable deviations.
 If a deviation increases detectability enough to offset the increase in uncertainty in theoretical risk, it is a deviation worth doing.
 
+# Notes {-}
+
+The materials for this article are available on [GitHub](https://github.com/aaronpeikert/bayes-prereg) [@zenodo-release].
+This version was created from git commit ``r repro::current_hash(backend = "gert")``.
+The manuscript is available as preprint [@no-preprint-yet] and will be submitted to [Philosophical Psychology](https://www.tandfonline.com/journals/cphp20).
+
 # References
 
