add packages for git hash version

--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -34,6 +34,8 @@ repro:
     - patchwork
     - tikzDevice
     - rticles
+    - gert
+    - aaronpeikert/repro@5075336
   tlmgr:
     - pgf
     - preview
