--- a/manuscript.Rmd
+++ b/manuscript.Rmd
@@ -363,8 +363,8 @@ results <- readr::read_rds(here::here("data", "simulation.rds"))
 # see R/plots.R
 ```
 
-```{r, dev = "tikz", cache=TRUE, warning=FALSE}
-#| fig.cap: "Posterior Probability (corroboration as firmness) as a function of $\tau$, where $\tau$ is either certain (solid line) or maximally uncertain (dotted line)."
+```{r posterior-fig, dev = "tikz", cache=TRUE, warning=FALSE}
+#| fig.cap: "\\label{fig:posterior}Posterior Probability (corroboration as firmness) as a function of $\\tau$, where $\\tau$ is either certain (solid line) or maximally uncertain (dotted line)."
 
 plots[["Posterior Probability"]] +
   labs(caption = "$p(E|H) = 0.8$, $p(H) = 0.1$",
@@ -374,8 +374,8 @@ plots[["Posterior Probability"]] +
         legend.title = element_blank())
 ```
 
-```{r, dev = "tikz", cache=TRUE, warning=FALSE}
-#| fig.cap: "Several measures for corroboration as increase in firmness as a function of $\tau$, where $\tau$ is either certain (solid line) or maximally uncertain (dotted line)."
+```{r other-measures-fig, dev = "tikz", cache=TRUE, warning=FALSE}
+#| fig.cap: "\\label{fig:other-measures}Several measures for corroboration as increase in firmness as a function of $\\tau$, where $\\tau$ is either certain (solid line) or maximally uncertain (dotted line)."
 
 plots[!(names(plots) %in% "Posterior Probability")] %>% 
   map(~ . +   theme_tufte()) %>% 
